--- a/ITS_demo/templates/layout.html
+++ b/ITS_demo/templates/layout.html
@@ -252,6 +252,36 @@ progress::-webkit-progress-bar {
 			document.getElementById("d3").style.width="0px";
 			document.getElementById("p1").style.paddingLeft="0%";
 		}
+		function openSlideMenu()
+{
+    document.getElementById('menu').style.width = '250px';
+    document.getElementById('content').style.marginLeft = '250px';
+}
+
+function closeSlideMenu()
+{
+    document.getElementById('menu').style.width = '0px';
+    document.getElementById('content').style.marginLeft = '0px';
+}
+
+var close = document.getElementsByClassName("closebtn");
+var i;
+
+for (i = 0; i < close.length; i++) {
+  close[i].onclick = function(){
+    var div = this.parentElement;
+    div.style.opacity = "0";
+    setTimeout(time,100);
+    function time(){
+     var s=document.getElementById("scre");
+     alert("Bhavya");
+     s.style.display="none";
+    }
+  }
+}
+
+
 	</script>
+	<script>{% block script_end %} {% endblock %} </script>
 </body>
 </html>
