--- a/ITS_demo/templates/vertical_sub.html
+++ b/ITS_demo/templates/vertical_sub.html
@@ -15,16 +15,6 @@
       #right {
         border:2pt solid green
       }
-
-      #line1{
-        visibility:hidden;
-        <!-- display:none; -->
-      }
-      #line2{
-        visibility:hidden;
-        <!-- display:none; -->
-      }
-
 }
 {% endblock %}
 
@@ -33,8 +23,7 @@
 var y = document.getElementsByClassName("wrong");
 
 var feedcount = 0;
-var l1 = document.getElementById("line1");
-var l2 = document.getElementById("line2");
+
 
 function check0()
 {
@@ -152,7 +141,7 @@ else
 
 function check6()
 {
-if(document.getElementsByTagName("input")[6].value == {{ answer.coeff[0] }} )
+if(document.getElementsByTagName("input")[6].value == {{ answer.x_diff }} )
 {
    $(x[1]).show();
      $(y[1]).hide();
@@ -171,7 +160,7 @@ else
 
 function check7()
 {
-if(document.getElementsByTagName("input")[7].value == {{ answer.coeff[2] }} )
+if(document.getElementsByTagName("input")[7].value == {{ answer.y_diff }} )
 {
    $(x[1]).show();
      $(y[1]).hide();
@@ -190,7 +179,7 @@ else
 
 function check8()
 {
-if(document.getElementsByTagName("input")[8].value == {{ answer.coeff[4] }} )
+if(document.getElementsByTagName("input")[8].value == {{ answer.z_diff }} )
 {
    $(x[1]).show();
      $(y[1]).hide();
@@ -207,99 +196,6 @@ else
  }
 }
 
-function check9()
-{
-if(document.getElementsByTagName("input")[9].value == {{ answer.coeff[1] }} )
-{
-   $(x[1]).show();
-     $(y[1]).hide();
-     document.getElementsByClassName("quo")[9].id = 'right';
-  }
-else
-{
- feedcount++;
-      $(x[1]).hide();
-      $(y[1]).show();
-      document.getElementsByClassName("quo")[9].id = 'error';
-    // document.getElementsByTagName("input")[9].value = "";
-
- }
-}
-
-function check10()
-{
-if(document.getElementsByTagName("input")[10].value == {{ answer.coeff[3] }} )
-{
-   $(x[1]).show();
-     $(y[1]).hide();
-     document.getElementsByClassName("quo")[10].id = 'right';
-  }
-else
-{
- feedcount++;
-      $(x[1]).hide();
-      $(y[1]).show();
-      document.getElementsByClassName("quo")[10].id = 'error';
-    // document.getElementsByTagName("input")[10].value = "";
-
- }
-}
-
-function check11()
-{
-if(document.getElementsByTagName("input")[11].value == {{ answer.coeff[5] }} )
-{
-   $(x[1]).show();
-     $(y[1]).hide();
-     document.getElementsByClassName("quo")[11].id = 'right';
-  }
-else
-{
- feedcount++;
-      $(x[1]).hide();
-      $(y[1]).show();
-      document.getElementsByClassName("quo")[11].id = 'error';
-    // document.getElementsByTagName("input")[11].value = "";
-
- }
-}
-
-function check12()
-{
-if(document.getElementsByTagName("input")[12].value == {{ answer.x_sum }} )
-{
-   $(x[2]).show();
-     $(y[2]).hide();
-     document.getElementsByClassName("quo")[12].id = 'right';
-  }
-else
-{
- feedcount++;
-      $(x[2]).hide();
-      $(y[2]).show();
-      document.getElementsByClassName("quo")[12].id = 'error';
-    // document.getElementsByTagName("input")[12].value = "";
-
- }
-}
-
-function check13()
-{
-if(document.getElementsByTagName("input")[13].value == {{ answer.y_sum }} )
-{
-   $(x[2]).show();
-     $(y[2]).hide();
-     document.getElementsByClassName("quo")[13].id = 'right';
-  }
-else
-{
- feedcount++;
-      $(x[2]).hide();
-      $(y[2]).show();
-       document.getElementsByClassName("quo")[13].id = 'error';
-
- }
-}
 
 window.onload = function() {
   var count = 0;
@@ -310,19 +206,15 @@ window.onload = function() {
     count++;
     if(count == 1)
     {
-      if(l1.style.visibility === "hidden"){
-        l1.style.visibility = "visible";
-      }
-     else{
-       l1.style.visibility = "hidden";
-     }
+      document.getElementById('line1').style.display = 'block';
     }
     else
     {
       if(count == 2)
-       {}
-
-
+       {
+        document.getElementById('line2').style.display = 'block';
+       }
+       
         else {displayCount[2].innerHTML = "Hint 3 :{{ hints.h3 }}\n" ;}
     }
     }
@@ -356,41 +248,32 @@ window.onload = function() {
 </div>
 {% endblock %}
 
-{% block progress %}{{scoredict.tcp}}%{% endblock %}
+{% block progress %}{{scoredict.pct}}%{% endblock %}
 {% block question %}{{scoredict.totalqts }}{% endblock %}
-{% block pvalue %}{{ scoredict.tcp }}{% endblock %}
-
-
+{% block pvalue %}{{ scoredict.pct }}{% endblock %}
 
 {% block content %}
 
     {{ answer.que }}
     <br><br>
-    <div id="line1">
-      (<input type="text" class="quo" name="quo" maxlength="3" size="3"  onblur="check0();"required>{{ answer.varx }}+
-      <input type="text" class="quo" name="quo" maxlength="3" size="3"  onblur="check1();" required>{{ answer.vary }})+
-      (<input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check2();" required>{{ answer.varx }}+
-      <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check3();" required>{{ answer.vary }})+
-      (<input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check4();" required>{{ answer.varx }}+
-      <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check5();" required>{{ answer.vary }})
-      <img src="{{ url_for('static', filename='images/tick.png') }}" width="50px" height="50px" class="correct">
-      <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="50px" height="50px" class="wrong">
+    <div id="line1" style="display:none">
+      <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check0();">{{ answer.varx }}+
+      <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check1();">{{ answer.vary }}+
+      <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check2();">{{ answer.varz }}
       <br><br>
     </div>
-    <div id="line2">
-      (<input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check6();" required>+
-      <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check7();" required>+
-      <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check8();" required>){{ answer.varx }}+
-      (<input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check9();" required>+
-      <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check10();" required>+
-      <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check11();" required>){{ answer.vary }}
-      <img src="{{ url_for('static', filename='images/tick.png') }}" width="50px" height="50px" class="correct">
-      <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="50px" height="50px" class="wrong">
-      <br><br>
+    <div id="line2" style="display:none">
+      <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check3();">{{ answer.varx }}+
+      <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check4();">{{ answer.vary }}+
+      <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check5();">{{ answer.varz }}
+      <br>
+      <!-- ------------------------------------------ -->
+      <h1><hr style="width: 300px; height: 5px; color: black; "></h1>
+      <br>
     </div>
-
-    <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check12();" required>{{ answer.varx }}+
-    <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check13();" required>{{ answer.vary }}
+    <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check6();" required>{{ answer.varx }}+
+    <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check7();" required>{{ answer.vary }}+
+    <input type="text" class="quo" name="quo" maxlength="3" size="3" onblur="check8();" required>{{ answer.varz }}
     <img src="{{ url_for('static', filename='images/tick.png') }}" width="50px" height="50px" class="correct">
     <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="50px" height="50px" class="wrong">
     <br><br>
