--- a/ITS_demo/templates/layout.html
+++ b/ITS_demo/templates/layout.html
@@ -197,7 +197,9 @@ progress::-webkit-progress-bar {
 {% block style %}{% endblock %}
 	</style>
 </head>
-<script type="text/javascript">{% block script %}{% endblock %}</script>
+<script type="text/javascript"> 
+{% block script %}{% endblock %}
+</script>
 
 <body>
 	<nav class="n1">
@@ -276,6 +278,6 @@ function closeSlideMenu()
 
 
 	</script>
-	<script>{% block script_end %} {% endblock %} </script>
+	<!-- <script>{% block script_end %} {% endblock %} </script> -->
 </body>
 </html>
