--- a/ITS_demo/templates/layout.html
+++ b/ITS_demo/templates/layout.html
@@ -266,15 +266,15 @@ function closeSlideMenu()
     document.getElementById('content').style.marginLeft = '0px';
 }
 
-<!--var close = document.getElementsByClassName("closebtn");-->
-<!--var i;-->
+// <!--var close = document.getElementsByClassName("closebtn");-->
+// <!--var i;-->
 
-<!--for (i = 0; i < close.length; i++) {-->
-<!--  close[i].onclick = function(){-->
-<!--    var div = this.parentElement;-->
-<!--    div.style.opacity = "0";-->
-<!--  }-->
-<!--}-->
+// <!--for (i = 0; i < close.length; i++) {-->
+// <!--  close[i].onclick = function(){-->
+// <!--    var div = this.parentElement;-->
+// <!--    div.style.opacity = "0";-->
+// <!--  }-->
+// <!--}-->
 
 
 	</script>
