--- a/ITS_demo/templates/short_display.html
+++ b/ITS_demo/templates/short_display.html
@@ -2,9 +2,45 @@
 {% block title %}Q1{% endblock %}
 
 {% block script %}
+var x = document.getElementsByClassName("correct");
+var y = document.getElementsByClassName("wrong");
+var feedcount = 0;
+
+var ans = [{{ answer.ans[0] }}, {{ answer.ans[1] }}, {{ answer.ans[2] }}, {{ answer.ans[3] }}, {{ answer.ans[4] }} ];
+
+function check(i)
+{
+	if(document.getElementsByTagName("input")[i].value == ans[i])
+	{
+	    $(x[i]).show();
+	    $(y[i]).hide();
+    }
+	 else
+	 {
+	    feedcount++;
+	    $(x[i]).hide();
+        $(y[i]).show();
+	    document.getElementsByTagName("input")[i].value = "";
+	    swal({
+  title: "Oops, Looks like you multiplied wrong ",
+  text: "To get numerator, multipliy it with multiplication factor i.e. lcm/denominator",
+  icon: "error",
+  button: true,
+  dangerMode: true,
+})
+.then((willDelete) => {
+  if (willDelete) {
+    swal("Now try again", {
+      icon: "success",
+    });
+  }
+});
+	 }
+}
+
+
 window.onload = function() {
     var count = 0;
-    
     var countButton = document.getElementById("hint-btn");
     var displayCount = document.getElementsByClassName("showhints");
     countButton.onclick = function(){
@@ -31,11 +67,7 @@ window.onload = function() {
          clearInterval(d);
       }
     }
-    
-    {% endblock %}
-
-
-
+{% endblock %}
 
 {% block message %} 
 {% with messages = get_flashed_messages(with_categories=true) %}
@@ -59,64 +91,10 @@ window.onload = function() {
     {{ answer.que }}
     <br><br>
     {% for i in range(5) %}
-    <input type="text" class="mf3" name="quo" maxlength="2" size="2" required>
+    <label for="">{{ labels.labels[i] }}</label>
+    <input type="text" class="mf3" name="quo" maxlength="2" size="2" onblur="check({{ i }});" required>
     <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct">
     <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong">
     <br><br>
     {% endfor %}
 {% endblock %}  
-
-
-{% block scriptend %} 
-var x = document.getElementsByClassName("correct");
-var y = document.getElementsByClassName("wrong");
-var feedcount = 0;
-var box = document.querySelectorAll(".mf3");
-
-box.forEach((key,value)=>{
-    key.onkeyup = function() {check(value)};
-    console.log("key : "+key);
-});
-
-function check(n){
-    console.log(box[n].value)
-    if(box[n].value == {{ answer.ans[n] }})
-    {
-        console.log({{answer.ans[n] }})
-       $(x[n]).show();
-       $(y[n]).hide();
-    }
-     else
-     {
-        console.log("feedcount "+feedcount);
-        feedcount++;
-        $(x[n]).hide();
-        $(y[n]).show();
-        box[n].value = "";
-        swal(
-        {
-          title: "Oops, Looks like you divided wrong ",
-          text: "for example, if you divide 9/4 then quotient is 2 and remainder is 9-(4*2) = 1",
-          icon: "error",
-          button: true,
-          dangerMode: true,
-        }
-       )
-        .then((willDelete) => {
-          if (willDelete) {
-            swal("Now, try again", {
-
-              icon: "success",
-            });
-          }
-        });
-     }
-}
-<!-- box.forEach(function(value, index){
-    value.onkeyup = check(index);
-    console.log("value : "+ value);
-    console.log("index : "+index);
-    console.log("vi : "+arr[index]);
-}); -->
-
-{% endblock %}
